<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/msg_shape_right"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sender_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="@string/sender"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/content_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="10sp"
            android:text="@string/content"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/time_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="@string/time"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>