<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/msg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND_CHAT"
    tools:context=".chat.ChatViewActivity">
    <LinearLayout
        android:id="@+id/linearLayout2_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/back_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/back"
                    android:src="@drawable/back" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgUser_chatView_activity"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/back_activity"
                    android:contentDescription="@string/user_account_image"
                    app:shapeAppearanceOverlay="@style/circular"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/username_chatView_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:layout_toEndOf="@+id/imgUser_chatView_activity"
                    android:text="@string/userName"
                    android:textSize="20sp" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allMsg_activity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >


        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linearLayout_activity"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userMsgInput_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/send_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@drawable/button_circle"
                android:backgroundTint="@color/yellow"
                android:contentDescription="@string/send"
                android:src="@drawable/send" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/nothing"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>