<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".contact.ContactListActivity" style="@style/BACKGROUND_CHAT"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/yellow"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/contact_list_image_activity"
        app:shapeAppearanceOverlay="@style/circular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:padding="5dp"
        android:contentDescription="@string/user_account_image"
        />

    <TextView
        android:id="@+id/contact_list_username_activity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:textSize="30sp"
        android:text="@string/userName"
        android:gravity="center"
        style="@style/TEXT"/>


    <ImageButton
        android:id="@+id/menu_contact_list_activity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#00FFFFFF"
        android:contentDescription="@string/menu_contact_list"
        android:src="@drawable/menu_button"
        />

</LinearLayout>

<!--        <ListView-->
<!--            android:id="@+id/contacts"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            />-->
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/refreshLayout_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contacts_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>