<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:hint="@string/login_etUsername"
            android:inputType="text"
            android:textSize="25sp"
            android:drawableLeft="@mipmap/ic_userinterface"
            android:drawablePadding="5dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginTop="16dp"
            android:hint="@string/login_etPassword"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:drawableLeft="@mipmap/ic_padlock"
            android:drawablePadding="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FFF9C8"
            android:padding="20dp"
            app:icon="@drawable/enter"
            app:iconGravity="end"
            app:iconPadding="0dp"
            app:iconSize="50dp"
            app:iconTint="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#7AFFD815"
        android:text="@string/login_tvRegistration"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>